--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.0",
