--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
